<resources>
    <string name="app_name">Flight Booking</string>
    <string name="x_Flight_booking">Flight Booking</string>
    <string name="_21_shaven_flat_near_central_library_sector">21 shaven flat, near central library, sector…</string>
    <string name="vadodara">Vadodara</string>
    <string name="gujarat">Gujarat</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="india">India</string>
    <string name="zip_code">Zip Code</string>
    <string name="_391231">391231</string>
    <string name="package_standard">Package: Standard</string>
    <string name="reward_bonus">Reward Bonus</string>
    <string name="Rs">\u20B9</string>
    <string name="_100">100</string>
    <string name="referral_ncommission">Referral \nCommission</string>
    <string name="sale_ncommission">Sale \nCommission</string>
    <string name="_9876361631">9876361631</string>
    <string name="_302_shaven_society_near">302 shaven society, near…</string>
    <string name="x_flight_booking">Flight Booking</string>
    <string name="bus">Bus</string>
    <string name="hotel">Hotel</string>
    <string name="flight">Flight</string>
    <string name="feb">Feb</string>
    <string name="_24">24</string>
    <string name="july_2019">July 2019</string>
    <string name="booking_32131221">Booking #32131221</string>
    <string name="neeta_travels">Neeta Travels</string>
    <string name="_10_00">10:00</string>
    <string name="boarding_central_library">Boarding : Central library</string>
    <string name="booking_2423231">Booking #2423231</string>
    <string name="booking_date_23_jan_2019_10_00_am">Booking Date: 23 jan 2019 | 10:00 AM</string>
    <string name="hyd_bom">HYD - BOM</string>
    <string name="non_stop_business_class">Non Stop | Business Class</string>
    <string name="txt_return">Return</string>
    <string name="thu_08_sept">Thu 08 Sept</string>
    <string name="air_india">Air India</string>
    <string name="a6_323">A6 323</string>
    <string name="_12_00">12:00</string>
    <string name="hyderabad_international_airport">Hyderabad international airport</string>
    <string name="thu_05_sept">Thu 05 Sept 2014</string>
    <string name="_2_hr">2 hr</string>
    <string name="non_stop">Non Stop</string>
    <string name="_15_00">15:00</string>
    <string name="mumbai_international_airport">Mumbai international airport</string>
    <string name="travellers">Travellers</string>
    <string name="pnr">PNR</string>
    <string name="male">Male</string>
    <string name="fasd21">FASD21</string>
    <string name="erik">Erik</string>
    <string name="fare_rules">Fare Rules</string>
    <string name="non_refundable">Non Refundable</string>
    <string name="payment_breakdown">Payment Breakdown</string>
    <string name="base_fare">Base Fare</string>
    <string name="adult_2_x_2360">Adult 2 x ₹2360</string>
    <string name="rupee_txt">₹</string>
    <string name="_4620">4620</string>
    <string name="fee_and_surcharge">Fee and Surcharge</string>
    <string name="regional_connectivity">Regional Connectivity</string>
    <string name="_500">500</string>
    <string name="goods_and_service_tax">Goods and Service Tax</string>
    <string name="passenger_service_fee">Passenger Service Fee</string>
    <string name="_200">200</string>
    <string name="others">Others</string>
    <string name="meal_2_x_100">Meal ( 2 x ₹100)</string>
    <string name="discount_applied_15_off">Discount Applied (15% off)</string>
    <string name="minus_rupee_txt">- ₹</string>
    <string name="_150">150</string>
    <string name="total_amount">Total Amount</string>
    <string name="paid">Paid</string>
    <string name="del_bom">DEL - BOM</string>
    <string name="airline_charge_1000_per_ticket">Airline Charge: ₹1000 per ticket</string>
    <string name="mobepay_charge_500_per_ticket">Mobepay Charge: ₹500 per ticket</string>
    <string name="bom_del">BOM - DEL</string>
    <string name="cancel_ticket">Cancel Ticket</string>
    <string name="customer_support">Customer Support</string>
    <string name="if_you_do_not_receive_your_ticket_via_sms_mail_or_regarding_any_query_contact_us_on_below">If you do not receive your ticket via sms/mail or Regarding any query contact us on below</string>
    <string name="_91_3121311231">+91 3121311231</string>
    <string name="call">Call</string>
    <string name="zxc_gmail_com">zxc@gmail.com</string>
    <string name="mail">Mail</string>
    <string name="need_help_about_this_booking"><u>Need help about this booking?</u></string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="share_booking">Share Booking</string>
    <string name="flight_review">Flight Review</string>
    <string name="traveller_details">Traveller Details</string>
    <string name="payment">Payment</string>
    <string name="terminal_1">Terminal 1</string>
    <string name="terminal_2">Terminal 2</string>
    <string name="traveller_detail">Traveller Detail</string>
    <string name="adu_lt_1_1">Adu lt (1/1)</string>
    <string name="add_traveller">+Add Traveller</string>
    <string name="children_0_1">Children (0/1)</string>
    <string name="no_traveller_added">No Traveller Added</string>
    <string name="guest_detail">Guest Detail</string>
    <string name="add_gst_tin_no_for_business_trip">Add GST TIN no. for business trip</string>
    <string name="optional">(optional)</string>
    <string name="company_name">Company Name</string>
    <string name="registration_number">Registration Number</string>
    <string name="i_agreed_with">I agreed with</string>
    <string name="terms_amp_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="for_2_travellers">For 2 Travellers</string>
    <string name="_1000">₹ 1000</string>
    <string name="txt_continue">Continue</string>
    <string name="veg_biryani">Veg Biryani</string>
    <string name="_250">₹250</string>
    <string name="add">+ Add</string>
    <string name="exit">Exit</string>
    <string name="free">Free</string>
    <string name="_550">₹550</string>
    <string name="selected">Selected</string>
    <string name="booked">Booked</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="from">From</string>
    <string name="hyd">HYD</string>
    <string name="hyderabad">Hyderabad</string>
    <string name="to">To</string>
    <string name="departure_on">Departure on</string>
    <string name="_24_feb_2019">24 Feb, 2019</string>
    <string name="return_on">Return on</string>
    <string name="_26_feb_2019">26 Feb, 2019</string>
    <string name="show_me_non_stop_flights_only">Show me non stop flights only</string>
    <string name="search_flight">Search Flight</string>
    <string name="successful">Successful!</string>
    <string name="booking_434321">Booking #434321</string>
    <string name="ok">OK</string>
    <string name="sort_filter">Sort / Filter</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="airtime_fee_mobepay_fee">Airtime Fee + MobePay Fee</string>
    <string name="_0_hours_to_24_hours">0 Hours to 24 Hours</string>
    <string name="_24_hours_to_365_days">24 Hours to 365 Days</string>
    <string name="adult_1500_to_2000_n_fare_difference">Adult - ₹1500 to ₹2000\n+ Fare Difference</string>
    <string name="adult_non_refundable">Adult - Non Refundable</string>
    <string name="adult">Adult</string>
    <string name="cabin">Cabin</string>
    <string name="_8_kg">8 kg</string>
    <string name="check_in">Check In</string>
    <string name="_15_kg">15 kg</string>
    <string name="txt_class">Class</string>
    <string name="refundable">Refundable</string>
    <string name="number_of_stops">Number of Stops</string>
    <string name="on_ward">On Ward</string>
    <string name="airlines">Airlines</string>
    <string name="debit_from">Debit From</string>
    <string name="reward_bonus_balance">Reward Bonus Balance</string>
    <string name="_0">₹ 0</string>
    <string name="referral_balance">Referral Balance</string>
    <string name="sales_commission_balance">Sales Commission Balance</string>
    <string name="_50">₹ 50</string>
    <string name="departure">Departure</string>
    <string name="baggages">Baggages</string>
    <string name="cabin_bag_8_kg">Cabin Bag - 8 kg</string>
    <string name="check_in_bag_15_kg">Check in Bag - 15 kg</string>
    <string name="travel_insurance">Travel Insurance</string>
    <string name="secure_your_trip_with_reliance_health_with_just_nrs_300_person">Secure your trip with reliance health with just\nRs. 300/person</string>
    <string name="view_terms"><u>View Terms</u></string>
    <string name="baggages_loss">Baggages Loss</string>
    <string name="_1120">₹ 1120</string>
    <string name="hospital">Hospital</string>
    <string name="view_n12_more">View\n12 More</string>
    <string name="yes_secure_my_trip_300_person">Yes, Secure my trip (₹ 300 / person)</string>
    <string name="no_i_do_not_want_to_secure_my_trip">No, I do not want to Secure my trip</string>
    <string name="apply_promo_code">Apply Promo Code</string>
    <string name="_35_off_on_your_1st_booking">35% off on your 1st booking</string>
    <string name="view_terms_amp_conditions"><u><![CDATA[View Terms & Conditions]]></u></string>
    <string name="zero_morepay_fee">Zero MorePay Fee</string>
    <string name="fri_05_sep">Fri, 05 sep</string>
    <string name="sat_06_sep">Sat, 06 sep</string>
    <string name="_3220">₹3220</string>
    <string name="sun_07_sep">Sun, 07 sep</string>
    <string name="_1520">₹1520</string>
    <string name="mon_08_sep">Mon, 08 sep</string>
    <string name="tue_09_sep">Tue, 09 sep</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="delhi">Delhi</string>
    <string name="mumbai">Mumbai</string>
    <string name="sort_by">Sort By</string>
    <string name="low_to_high_price">Low to High Price</string>
    <string name="short_to_long_duration">Short to Long Duration</string>
    <string name="early_to_late_departure">Early to Late Departure</string>
    <string name="late_to_early_departure">Late to Early Departure</string>
</resources>